--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.datasource.url=jdbc:mysql://hackathon.csgwrg6wkcup.ap-northeast-2.rds.amazonaws.com:3306/hackathon
+
+spring.datasource.username=admin
+
+spring.datasource.password=2023082425
+
+spring.jpa.show-sql=true
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.format_sql=true
